# NyaProxy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_ja.md  README_zh.md  config.yaml  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt  schema.json
.github/workflows/: dependency-review.yml  publish.yml  scan.yml  test.yml
assets/brand/: README.md
configs/: gemini.yaml  novelai.yaml  openai.yaml
docs/: openai-docker.md  openai-pip.md  request_body_substitution.md
examples/: gemini_api.yaml  github_api.yaml  novelai_api.yaml  openai_api.yaml  reddit_api.yaml  x_twitter_api.yaml
nya/: __init__.py  __main__.py  config.yaml  schema.json
nya-app/: .env.production  .prettierrc.json  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
nya-app/scripts/: build-config.js
nya-app/src/: App.vue  components.d.ts  main.ts
nya-app/src/api/: configApi.ts  dashboardApi.ts  index.ts
nya-app/src/components/Application/: AppTheme.vue  index.ts
nya-app/src/hooks/: useAppSetting.ts  useDevice.ts  useECharts.ts  useEventListener.ts  useServerConfig.ts  useTheme.ts
nya-app/src/layout/: index.vue
nya-app/src/layout/components/AppMain/: index.vue
nya-app/src/layout/components/Navbar/: index.vue
nya-app/src/layout/components/SideNavigationBar/: SideBarDisplay.vue  index.vue
nya-app/src/layout/components/Sidebar/: Item.vue  SidebarItem.vue  index.vue
nya-app/src/pages/dashboard/components/Analysis/components/: Bar.vue  Line1.vue  Pie2.vue
nya-app/src/pages/dashboard/components/HistoryRequests/: index.vue
nya-app/src/pages/dashboard/components/Queue/: index.vue
nya-app/src/pages/dashboard/components/apiDetails/: index.vue
nya-app/src/pages/nekoconf/: index.vue
nya-app/src/router/: index.ts
nya-app/src/stores/: auth.ts
nya-app/src/stores/modules/: analytics.ts  app.ts  auth.ts  history.ts  metrics.ts  queue.ts
nya-app/src/styles/: index.scss  loading.css  sidebar.scss  table-filter.scss  theme.scss
nya-app/src/styles/variables/: index.scss  site-bar.scss
nya-app/src/styles/variables/theme/: dark.scss  index.scss  light.scss
nya-app/src/types/: appConfig.d.ts  auth.d.ts  global.d.ts  nekoConf.d.ts  router.d.ts
nya-app/src/utils/: auth.ts  global.ts  http.ts  methods.ts  nprogress.ts  transformTheme.ts
nya-app/src/views/404/: index.vue
nya-app/src/views/dashboard/: index.vue
nya-app/src/views/dashboard/components/Analysis/: index.vue
nya-app/src/views/dashboard/components/Analysis/components/: Bar.vue  Line1.vue  Line2.vue  Pie1.vue  Pie2.vue
nya-app/src/views/dashboard/components/HistoryRequests/: index.vue
nya-app/src/views/dashboard/components/Queue/: index.vue
nya-app/src/views/dashboard/components/apiDetails/: index.vue
nya-app/src/views/dashboard/components/fixTool/: index.vue
nya-app/src/views/dashboard/components/topDetails/: index.vue
nya-app/src/views/login/: index.vue
nya-app/src/views/nekoconf/: index.vue
nya-app/src/views/nekoconf/components/: ApiSetting.vue  DefaultSetting.vue  ServerSetting.vue
nya/common/: constants.py  exceptions.py  logging.py  models.py
nya/config/: __init__.py  manager.py
nya/core/: control.py  factory.py  handler.py  proxy.py  queue.py  request.py  response.py  streaming.py
nya/dashboard/: api.py
nya/dashboard/routes/: __init__.py  control.py  history.py  metrics.py  pages.py  queue.py
nya/html/: index.html  login.html
nya/html/static/css/: styles.css
nya/html/static/js/: dashboard.js
nya/server/: app.py  auth.py
nya/services/: control.py  key.py  lb.py  limit.py  metrics.py  queue.py  state.py
nya/utils/: formatting.py  header.py  helper.py  redaction.py  substitution.py
nya_proxy/: __init__.py  app.py  auth.py  config_manager.py  constants.py  core.py  dashboard.py  exceptions.py  header_processor.py  key_manager.py  load_balancer.py  logger.py  metrics.py  models.py  proxy_handler.py  rate_limiter.py  request_executor.py  request_queue.py  response_processor.py  utils.py
nya_proxy/common/: constants.py  models.py  utils.py
nya_proxy/core/: handler.py  request_executor.py  response_processor.py
nya_proxy/dashboard/: api.py
nya_proxy/integrations/: openai.py
nya_proxy/server/: app.py  auth.py  config.py  logger.py
nya_proxy/templates/: index.html
nya_proxy/templates/static/css/: styles.css
nya_proxy/templates/static/js/: dashboard.js
scripts/: burst.py
tests/: conftest.py  openai_re.py  server.py  stress_test.sh  test_core_request_parsing.py  test_header_processor.py  test_load_balancer.py  test_load_balancer_strategies.py  test_metrics_analytics.py  test_metrics_collector.py  test_proxy_handler.py  test_proxy_handler_integration.py  test_rate_limiter.py  test_rate_limiter_advanced.py  test_request_queue.py  test_request_queue_advanced.py  test_utils.py
tests/e2e/: conftest.py  test_event_wait.py  test_http_fidelity.py  test_key_release.py  test_load_scenario.py  test_proxy_flow.py  test_rate_limit_retry.py  test_upstream_failures.py
tests/integration/: test_core_flow.py  test_server_routes.py
tests/misc/: test_access.py
tests/unit/: core_helpers.py  test_auth.py  test_config_manager.py  test_core_components.py  test_core_control.py  test_core_handler.py  test_core_proxy.py  test_core_queue.py  test_core_request.py  test_core_streaming.py  test_dashboard.py  test_exceptions_models.py  test_lb.py  test_limit.py  test_logging.py  test_metrics.py  test_regressions.py  test_robustness.py  test_server_app.py  test_state_persistence.py  test_substitution.py  test_utils_misc.py
tests/unit/common/: test_utils.py
tests/unit/core/: test_core_request_parsing.py  test_header_processor.py
tests/unit/services/: test_key_manager.py  test_load_balancer.py  test_rate_limiter.py  test_request_queue.py
