[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nya-proxy"
version = "0.6.0"
description = "A lightweight, flexible API proxy with dynamic token rotation, load balancing, and rate limiting capabilities."
readme = "README.md"
authors = [
    {name = "Nya Foundation Team (k3scat)", email = "k3scat@gmail.com"},
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
    "httpx[socks]>=0.28.0",
    "setuptools>=80.0.0",
    # Not imported directly: uvicorn's file-watch backend for config hot-reload
    "watchfiles>=1.0.0",
    "jmespath>=1.1.0",
    "orjson>=3.11,<4",
    "loguru>=0.7.3",
    "prometheus-client>=0.25.0",
    "nacho-python[remote,schema,server]>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "aioresponses>=0.7.8",
]
lint = [
    "flake8>=7.0.0",
    "black>=25.0.0",
    "isort>=6.0.0",
    "mypy>=1.14.0",
]

[project.urls]
"Homepage" = "https://github.com/Nya-Foundation/nyaproxy"
"Bug Tracker" = "https://github.com/Nya-Foundation/nyaproxy/issues"

[project.scripts]
nyaproxy = "nya.server.app:main"



[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Legacy modules are still type-dirty; analyse them when imported but do
# not report their errors. Remove this once `files` covers all of `nya`.
follow_imports = "silent"
# Ratchet: mypy currently checks only the modules known to be type-clean.
# As legacy modules are fixed (run `mypy nya/` to see the backlog), add
# them here until the whole `nya` package is covered.
files = [
    "nya/server/auth.py",
    "nya/services/limit.py",
    "nya/services/lb.py",
    "nya/utils/formatting.py",
    "nya/utils/redaction.py",
    "nya/utils/substitution.py",
    "nya/dashboard",
]

[tool.coverage.run]
source = ["nya"]
omit = ["tests/*"]
data_file = "reports/.coverage"

[tool.coverage.html]
directory = "reports/htmlcov"

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]


[tool.setuptools]
package-dir = {"" = "."}  # Use current directory as source root
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]  # Root directory for discovery
include = ["nya*"] # Include nya and its subpackages


[tool.setuptools.package-data]
"nya" = ["config.yaml", "schema.json"]
"nya.html" = ["*.html", 'favicon.ico', "static/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "*.pyo", "__pycache__/*"]


[tool.semantic_release]
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["nya/_version.py:__version__"]
build_command = "python -m pip install build && python -m build"
commit_parser = "conventional"
commit_message = "chore(release): bump version to v{version} [skip ci]"
commit_author = "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true


[dependency-groups]
dev = []
